--- a/index.html
+++ b/index.html
@@ -23,64 +23,65 @@
         <div class="carousel-item">
             <div class="carousel-box">
                 <div class="num">02</div>
+                <img src="02.jpg" alt="">
             </div>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-box">
                 <div class="num">03</div>
+                <img src="03.jpg" alt="">
             </div>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-box">
                 <div class="num">04</div>
-                <img
-                    src="https://e0.pxfuel.com/wallpapers/905/313/desktop-wallpaper-kim-jisoo-blackpink-jisoo-blackpink-jisoo-cute.jpg" />
+                <img src="04.jpg" />
             </div>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-box">
                 <div class="num">05</div>
-                <img src="https://i.pinimg.com/564x/10/65/e2/1065e28ad75fc7b24f2147cfcdfd5824.jpg" />
+                <img src="05.jpg" />
             </div>
+
         </div>
 
         <div class="carousel-item">
             <div class="carousel-box">
                 <div class="num">06</div>
-                <img src="https://www.allkpop.com/upload/2023/06/content/011733/1685655224-untitled-1.jpg" />
+                <img src="06.jpg" />
             </div>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-box">
                 <div class="num">07</div>
-                <img
-                    src="https://w0.peakpx.com/wallpaper/862/303/HD-wallpaper-jisoo-blackpink-blackpink-jisoo-k-pop.jpg" />
+                <img src="07.jpg" />
             </div>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-box">
                 <div class="num">08</div>
-                <img src="https://wallpapercave.com/wp/wp2837203.jpg" />
+                <img src="08.jpg" />
             </div>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-box">
-                
+
                 <div class="num">09</div>
-                <img src="https://wallpapercave.com/dwp2x/wp3113283.jpg" />
+                <img src="09.jpg" />
             </div>
         </div>
         <div class="carousel-item">
             <div class="carousel-box">
-                
+
                 <div class="num">10</div>
-                <img src="https://i.pinimg.com/564x/4c/90/85/4c90852f3645127ffa41e350e94dd579.jpg" />
+                <img src="10.jpg" />
             </div>
         </div>
     </div>
